# network-monitor

./: package.json  tsconfig.json
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  network_metrics.rs  ping.rs  speed.rs  speed_test.rs  throttle.rs
src-tauri/tests/: network_metrics_tests.rs
src/components/: network-metrics.tsx  ping-results.tsx  results.tsx  speed-test.tsx  test-results.tsx
src/db/: speed-test.ts
src/styles/: result-table.css
src/util/: formatters.ts  math.ts  types.ts
